deployment/display-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: display-backend
spec:
  selector:
    app: display-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
