deployment/display-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: display-frontend
spec:
  selector:
    app: display-frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
    nodePort: 30000
  type: NodePort
